still working on debugging layout issues. Fixed issue with adding adj matrix cols from set selector. 'Dead end' leaves also no longer show an arrow in level mode.

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,15 @@
+// @font-face {
+//   font-family: 'fontello';
+//   src: url('./font/fontello.eot?44137923');
+//   src: url('./font/fontello.eot?44137923#iefix') format('embedded-opentype'),
+//        url('./font/fontello.woff2?44137923') format('woff2'),
+//        url('./font/fontello.woff?44137923') format('woff'),
+//        url('./font/fontello.ttf?44137923') format('truetype'),
+//        url('./font/fontello.svg?44137923#fontello') format('svg');
+//   font-weight: normal;
+//   font-style: normal;
+// }
+
 body, html {
   font-family: 'Abel', Yantramanav, 'Helvetica Neue', Helvetica, sans-serif !important;
   font-weight: 400;
@@ -194,6 +206,12 @@ td .addNode{
 
 .end {
   stop-color: #009688;  /* Teal */
+}
+
+.hasHiddenChildren{
+  stroke:#9a9898;
+  fill:white !important;
+  stroke-width: 1.5px;
 }
 
 
